--- a/iCodeHack/Coin/src/index.html
+++ b/iCodeHack/Coin/src/index.html
@@ -16,13 +16,40 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+.button1 {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.button1:hover {
+  background-color:darkgreen;
+  color: white;
+}
+img {
+  float:right;
+  
+
+}
+    </style>
   </head>
-  <body>
+  <body >
     <div id="show_event" style="position:absolute;top:37px;right:-410px;width: 400px; height: 92px; border-radius: 10px 10px 10px 10px;position: fixed;color: #04ce04;padding-right: 10px;background: #ffffff;text-align: center;overflow: hidden;border: 1px solid;margin:0 auto;">
       <span  id="showmessage_text" style="float: left;padding: 10px;"></span>
     </div>
     <div class="container">
+      
       <div class="row">
+        <img src="money.png"></img>
         <div class="col-xs-12 col-sm-8 col-sm-push-2">
           <h1 class="text-center">Coin Transaction</h1>
           <h5 class="text-center" id="minter">Minter : </h5>
@@ -35,6 +62,7 @@
       <div id="proposalsRow" class="row">
         <!-- CANDIDATES LOAD HERE -->
       </div>
+      
     </div>
 
   <center>
@@ -49,7 +77,7 @@
       <span>Balance : </span>
       <input disabled type="text" id="display_balance" style="margin-top: 40px;">
     </div>
-    <button id="balance" style="margin-top: 40px;" class="btn btn-info" type="button" id="create_money">Balance</button>
+    <button id="balance" style="margin-top: 40px;" class="button1" type="button" id="create_money">Balance</button>
   </div>
 
   <div class="column" id="create_coin"  style="float: left;width: 40%;padding: 10px;height: 300px; border-right: 1px solid #00000040">
@@ -64,7 +92,7 @@
       <span>Amount : </span>
       <input type="number" id="create_amount" style="margin-top: 40px;" >
     </div>
-    <button style="margin-top: 40px;" class="btn btn-info" type="button" id="create_money">Mint</button>
+    <button style="margin-top: 40px;" class="button1" type="button" id="create_money">Mint</button>
   </div>
 
   <div class="column" id="send_coin" style="float: left;width: 30%;padding: 10px;height: 300px;">
@@ -79,7 +107,7 @@
       <span>Amount : </span>
       <input type="number" id="send_amount" style="margin-top: 40px;" >
     </div>
-    <button style="margin-top: 40px;" class="btn btn-info" type="button" id="send_money">Send</button>
+    <button style="margin-top: 40px;" class="button1" class="btn btn-info" type="button" id="send_money">Send</button>
   </div>
   </div>
 </div>
