--- a/iCodeHack/medic/public/index.html
+++ b/iCodeHack/medic/public/index.html
@@ -25,7 +25,7 @@
     <title>Dapp University Starter Kit</title>
     <style>
       body{
-        background: linear-gradient(to right, #a5a5a5, #3c393d, #737677);
+        background: linear-gradient(90deg, #a1b1d4, #9e9e9e, #5265a1); 
         
       }
     </style>
